Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    
+- script: |
+    echo "Listing files:"
+    find . -type f
+  displayName: 'List files for debugging'
+
 - task: CopyFiles@2
   inputs:
     Contents: '**/.war'
@@ -27,5 +33,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'warfile'
+    ArtifactName: 'war'
     publishLocation: 'Container'
